Imagens de fundo e contato vendedores

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8">
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/curumim/favIcon.png" rel="icon">
+  <link href="assets/img/curumim/favIcon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -37,24 +37,18 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo mr-auto"><a href="index.html"><img alt="" src="assets/img/curumim/curumim_semFundo.png"/></a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <h1 class="logo mr-auto"><a href="#hero"><img alt="" src="assets/img/curumim/logo.png"/></a></h1>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="#about">Sobré Nós</a></li>
+          <li class="active"><a href="#hero">Início</a></li>
+          <li><a href="#about">Sobre Nós</a></li>
           <li><a href="#produtos">Nossos Produtos</a></li>
           <li><a href="#encontreVendedor">Encontre um Vendedor</a></li>
-<!--           <li><a href="#menu">Menu</a></li> -->
-<!--           <li><a href="#events">Events</a></li> -->
-<!--           <li><a href="#gallery">Gallery</a></li> -->
-<!--           <li><a href="#chefs">Chefs</a></li> -->
-          <li><a href="#contact">Onde Estamos</a></li>
-<!--           <li class="book-a-table text-center"><a href="#book-a-table">Book a table</a></li> -->
+		  <li><a href="#contact">Onde Estamos</a></li>
         </ul>
-      </nav><!-- .nav-menu -->
+      </nav>
+     <!-- .nav-menu -->
 
     </div>
   </header><!-- End Header -->
@@ -64,18 +58,10 @@
     <div class="container position-relative text-center text-lg-left" data-aos="zoom-in" data-aos-delay="100">
       <div class="row">
         <div class="col-lg-8">
-          <h1>Welcome to <span>Restaurantly</span></h1>
-          <h2>Delivering great food for more than 18 years!</h2>
+          <h1>Pipocas e Salgadinhos <span>Curumim</span></h1>
+          <h2>Uma explosão de sabor!</h2>
 
-          <div class="btns">
-            <a href="#menu" class="btn-menu animated fadeInUp scrollto">Our Menu</a>
-            <a href="#book-a-table" class="btn-book animated fadeInUp scrollto">Book a Table</a>
-          </div>
         </div>
-        <div class="col-lg-4 d-flex align-items-center justify-content-center" data-aos="zoom-in" data-aos-delay="200">
-          <a href="https://www.youtube.com/watch?v=GlrxcuEDyF8" class="venobox play-btn" data-vbtype="video" data-autoplay="true"></a>
-        </div>
-
       </div>
     </div>
   </section><!-- End Hero -->
@@ -92,11 +78,6 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="100">
-            <div class="about-img">
-              <img src="assets/img/about.jpg" alt="">
-            </div>
-          </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h3>Pipocas Curumim.</h3>
             <br/>
@@ -126,167 +107,9 @@
     </section>
     <!-- End About Section -->
 
-    <!-- ======= Why Us Section ======= -->
-<!--     <section id="why-us" class="why-us"> -->
-<!--       <div class="container" data-aos="fade-up"> -->
-
-<!--         <div class="section-title"> -->
-<!--           <h2>Why Us</h2> -->
-<!--           <p>Why Choose Our Restaurant</p> -->
-<!--         </div> -->
-
-<!--         <div class="row"> -->
-
-<!--           <div class="col-lg-4"> -->
-<!--             <div class="box" data-aos="zoom-in" data-aos-delay="100"> -->
-<!--               <span>01</span> -->
-<!--               <h4>Lorem Ipsum</h4> -->
-<!--               <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p> -->
-<!--             </div> -->
-<!--           </div> -->
-
-<!--           <div class="col-lg-4 mt-4 mt-lg-0"> -->
-<!--             <div class="box" data-aos="zoom-in" data-aos-delay="200"> -->
-<!--               <span>02</span> -->
-<!--               <h4>Repellat Nihil</h4> -->
-<!--               <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest</p> -->
-<!--             </div> -->
-<!--           </div> -->
-
-<!--           <div class="col-lg-4 mt-4 mt-lg-0"> -->
-<!--             <div class="box" data-aos="zoom-in" data-aos-delay="300"> -->
-<!--               <span>03</span> -->
-<!--               <h4> Ad ad velit qui</h4> -->
-<!--               <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p> -->
-<!--             </div> -->
-<!--           </div> -->
-
-<!--         </div> -->
-
-<!--       </div> -->
-<!--     </section> -->
-    <!-- End Why Us Section -->
-
-    <!-- ======= Menu Section ======= -->
-<!--     <section id="menu" class="menu section-bg"> -->
-<!--       <div class="container" data-aos="fade-up"> -->
-
-<!--         <div class="section-title"> -->
-<!--           <h2>Produtos</h2> -->
-<!--           <p>O que vendemos</p> -->
-<!--         </div> -->
-
-<!--         <div class="row" data-aos="fade-up" data-aos-delay="100"> -->
-<!--           <div class="col-lg-12 d-flex justify-content-center"> -->
-<!--             <ul id="menu-flters"> -->
-<!--               <li data-filter="*" class="filter-active">All</li> -->
-<!--               <li data-filter=".filter-starters">Starters</li> -->
-<!--               <li data-filter=".filter-salads">Salads</li> -->
-<!--               <li data-filter=".filter-specialty">Specialty</li> -->
-<!--             </ul> -->
-<!--           </div> -->
-<!--         </div> -->
-
-<!--         <div class="row menu-container" data-aos="fade-up" data-aos-delay="200"> -->
-
-<!--           <div class="col-lg-6 menu-item filter-starters"> -->
-<!--             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt=""> -->
-<!--             <div class="menu-content"> -->
-<!--               <a href="#">Lobster Bisque</a><span>$5.95</span> -->
-<!--             </div> -->
-<!--             <div class="menu-ingredients"> -->
-<!--               Lorem, deren, trataro, filede, nerada -->
-<!--             </div> -->
-<!--           </div> -->
-
-<!--           <div class="col-lg-6 menu-item filter-specialty"> -->
-<!--             <img src="assets/img/menu/bread-barrel.jpg" class="menu-img" alt=""> -->
-<!--             <div class="menu-content"> -->
-<!--               <a href="#">Bread Barrel</a><span>$6.95</span> -->
-<!--             </div> -->
-<!--             <div class="menu-ingredients"> -->
-<!--               Lorem, deren, trataro, filede, nerada -->
-<!--             </div> -->
-<!--           </div> -->
-
-<!--           <div class="col-lg-6 menu-item filter-starters"> -->
-<!--             <img src="assets/img/menu/cake.jpg" class="menu-img" alt=""> -->
-<!--             <div class="menu-content"> -->
-<!--               <a href="#">Crab Cake</a><span>$7.95</span> -->
-<!--             </div> -->
-<!--             <div class="menu-ingredients"> -->
-<!--               A delicate crab cake served on a toasted roll with lettuce and tartar sauce -->
-<!--             </div> -->
-<!--           </div> -->
-
-<!--           <div class="col-lg-6 menu-item filter-salads"> -->
-<!--             <img src="assets/img/menu/caesar.jpg" class="menu-img" alt=""> -->
-<!--             <div class="menu-content"> -->
-<!--               <a href="#">Caesar Selections</a><span>$8.95</span> -->
-<!--             </div> -->
-<!--             <div class="menu-ingredients"> -->
-<!--               Lorem, deren, trataro, filede, nerada -->
-<!--             </div> -->
-<!--           </div> -->
-
-<!--           <div class="col-lg-6 menu-item filter-specialty"> -->
-<!--             <img src="assets/img/menu/tuscan-grilled.jpg" class="menu-img" alt=""> -->
-<!--             <div class="menu-content"> -->
-<!--               <a href="#">Tuscan Grilled</a><span>$9.95</span> -->
-<!--             </div> -->
-<!--             <div class="menu-ingredients"> -->
-<!--               Grilled chicken with provolone, artichoke hearts, and roasted red pesto -->
-<!--             </div> -->
-<!--           </div> -->
-
-<!--           <div class="col-lg-6 menu-item filter-starters"> -->
-<!--             <img src="assets/img/menu/mozzarella.jpg" class="menu-img" alt=""> -->
-<!--             <div class="menu-content"> -->
-<!--               <a href="#">Mozzarella Stick</a><span>$4.95</span> -->
-<!--             </div> -->
-<!--             <div class="menu-ingredients"> -->
-<!--               Lorem, deren, trataro, filede, nerada -->
-<!--             </div> -->
-<!--           </div> -->
-
-<!--           <div class="col-lg-6 menu-item filter-salads"> -->
-<!--             <img src="assets/img/menu/greek-salad.jpg" class="menu-img" alt=""> -->
-<!--             <div class="menu-content"> -->
-<!--               <a href="#">Greek Salad</a><span>$9.95</span> -->
-<!--             </div> -->
-<!--             <div class="menu-ingredients"> -->
-<!--               Fresh spinach, crisp romaine, tomatoes, and Greek olives -->
-<!--             </div> -->
-<!--           </div> -->
-
-<!--           <div class="col-lg-6 menu-item filter-salads"> -->
-<!--             <img src="assets/img/menu/spinach-salad.jpg" class="menu-img" alt=""> -->
-<!--             <div class="menu-content"> -->
-<!--               <a href="#">Spinach Salad</a><span>$9.95</span> -->
-<!--             </div> -->
-<!--             <div class="menu-ingredients"> -->
-<!--               Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette -->
-<!--             </div> -->
-<!--           </div> -->
-
-<!--           <div class="col-lg-6 menu-item filter-specialty"> -->
-<!--             <img src="assets/img/menu/lobster-roll.jpg" class="menu-img" alt=""> -->
-<!--             <div class="menu-content"> -->
-<!--               <a href="#">Lobster Roll</a><span>$12.95</span> -->
-<!--             </div> -->
-<!--             <div class="menu-ingredients"> -->
-<!--               Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll -->
-<!--             </div> -->
-<!--           </div> -->
-
-<!--         </div> -->
-
-<!--       </div> -->
-<!--     </section> -->
-    <!-- End Menu Section -->
 
     <!-- ======= Specials Section ======= -->
-    <section id="produtos" class="specials">
+    <section id="produtos" class="produtos">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -298,7 +121,7 @@
           <div class="col-lg-3">
             <ul class="nav nav-tabs flex-column">
               <li class="nav-item">
-                <a class="nav-link active show" data-toggle="tab" href="#tab-1">Pipoca Doce</a>
+                <a class="nav-link active show" data-toggle="tab-1" href="#tab-1">Pipoca Doce</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#tab-2">Salgadinhos de Queijo</a>
@@ -367,18 +190,30 @@
 
       </div>
     </section>
-    <section id="encontreVendedor">
+    <section id="encontreVendedor" class="encontreVendedor">
        <div class="container" data-aos="fade-up">
 
         <div class="section-title">
           <h2>Compre Conosco</h2>
           <p>Nossos Vendedores</p>
         </div>
-        <div>
-           <i class="icofont-vendedor-masc"></i> <strong>Vendedor 1 -</strong> (xx)xxxxx-xxxx
+        <div class="dadosVendedor">
+           <i class="icofont-vendedor-fem"></i> <strong>Andréa - </strong>(38) 98831-5271
+           <a href="https://api.whatsapp.com/send?l=pt&amp;phone=5538988315271" target="_blank">
+	           <img src="https://i.imgur.com/ryESuZ5.png" style="height:25px; left: 250px; position:fixed">
+           </a>
         </div>
-        <div>
-            <i class="icofont-vendedor-fem"></i> <strong>Vendedor 2 -</strong> (yy)yyyyy-yyyy
+        <div class="dadosVendedor">
+            <i class="icofont-vendedor-fem"></i> <strong>Cláudia - </strong>(38) 99168-4535
+            <a href="https://api.whatsapp.com/send?l=pt&amp;phone=5538991684535" target="_blank">
+	           <img src="https://i.imgur.com/ryESuZ5.png" style="height:25px; left: 250px; position:fixed">
+           </a>
+        </div>
+        <div class="dadosVendedor">
+           <i class="icofont-vendedor-masc"></i> <strong>Marcos - </strong>(31) 98735-7113
+			<a href="https://api.whatsapp.com/send?l=pt&amp;phone=5531987357113" target="_blank">
+	           <img src="https://i.imgur.com/ryESuZ5.png" style="height:25px; left: 250px; position:fixed">
+           </a>
         </div>
 
        </div>
@@ -442,10 +277,18 @@
         &copy; Copyright <strong><span>Produtos Alimentícios Rodrigues</span></strong>.
       </div>
     </div>
+
+     <!-- Contador de  Visitas -->
+  <div class="counter">
+	  <img src="https://counter3.stat.ovh/private/webcontadores.php?c=dmgq9qcr77z5darhejuy9qle1zx5hjmk" border="0" title="contador de visitas" alt="contador de visitas" width="10%" ho>
+  </div>
   </footer>
   <!-- End Footer -->
 
   <div id="preloader"></div>
+
+
+
   <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
 
   <!-- Vendor JS Files -->
